	documentation.

	* src/core/exmpp.erl, src/core/exmpp_sup.erl: Add basic documentation.
	Style.

	* src/core/exmpp_iq.erl, src/Emakefile.in, src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add exmpp_iq, a
	new module to provide functions specific to IQs.

	* testsuite/testsuite.erl: Be verbose when Result and Ref doesn't
	match. Style.

2008-04-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/Makefile.am: Wildcards are voluntarily not supported by
	automake(1). To fix the build, we list explicitly every HTML files.
	The "-i ''" argument of BSD sed still doesn't behave like GNU sed. To
	fix this, we use an backup extension ("-i.bak") and remove the
	backup.

	* testsuite/test.sh: Fix sed(1) usage as above.

2008-04-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* README: Fix autotools usage.

	* testsuite/test.sh, testsuite/check_coverity.erl,
	testsuite/Makefile.am: Build an index for code coverage reports.

	* doc/Makefile.am: Replace ISO-8859-1-encoded '©' by an HTML entity.

2008-04-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/Makefile.am: Update modules list. Replace erl -make by a small
	Erlang code snippet: if a module doesn't compile, the make process
	will abort.

	* src/Emakefile.in: Update modules list.

	* ebin/Makefile.am: Update modules list. Install examples in a
	separate directory (examples/ebin instead of ebin) to avoid namespace
	pollution.

	* doc/Makefile.am: Add the examples to the dependencies. Fix the
	sed(1) call; with BSD sed, the -i'' argument wasn't using a
	zero-length extension but the next argument as the backup extension.
	Fix the distributed files list.

	* src/network/exmpp_ssl.erl, src/network/exmpp_session.erl,
	src/examples/echo_client.erl: Fix warning with unused variables. Three
	warnings remain in exmpp_session but this requires more work.

	* src/examples/echo_client.erl: Fix a malformed documentation. Fix
	includes path.
