@@ -26,14 +26,12 @@
 		'@srcdir@/client/exmpp_client_roster',
 		'@srcdir@/client/exmpp_client_sasl',
 		'@srcdir@/client/exmpp_client_session',
-		'@srcdir@/client/exmpp_client_stream',
 		'@srcdir@/client/exmpp_client_tls',
 		'@srcdir@/server/exmpp_server_binding',
 		'@srcdir@/server/exmpp_server_compression',
 		'@srcdir@/server/exmpp_server_legacy_auth',
 		'@srcdir@/server/exmpp_server_sasl',
 		'@srcdir@/server/exmpp_server_session',
-		'@srcdir@/server/exmpp_server_stream',
 		'@srcdir@/server/exmpp_server_tls',
 		@COMPAT_MODULES@'@srcdir@/compat/ejabberd_zlib',
 		@COMPAT_MODULES@'@srcdir@/compat/iconv',
