@@ -24,14 +24,12 @@ EXTRA_DIST = core/exmpp.erl						\
 	     client/exmpp_client_roster.erl				\
 	     client/exmpp_client_sasl.erl				\
 	     client/exmpp_client_session.erl				\
-	     client/exmpp_client_stream.erl				\
 	     client/exmpp_client_tls.erl				\
 	     server/exmpp_server_binding.erl				\
 	     server/exmpp_server_compression.erl			\
 	     server/exmpp_server_legacy_auth.erl			\
 	     server/exmpp_server_sasl.erl				\
 	     server/exmpp_server_session.erl				\
-	     server/exmpp_server_stream.erl				\
 	     server/exmpp_server_tls.erl				\
 	     compat/ejabberd_zlib.erl					\
 	     compat/iconv.erl						\
